# scaffold

./: .gitignore  .lintstagedrc.mjs  .oxlintrc.json  .prettierignore  Cargo.toml  README.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rustfmt.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: lint.yml
