[project]
name = "daihaus-scaffold"
version = "0.0.0"
description = "TypeScript + Python monorepo scaffold"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
  "ruff>=0.15.16",
]

# The repository root is a workspace root, not an installable package
[tool.uv]
package = false

# Python workspace members are listed explicitly (not via globs) so that
# TypeScript-only directories under apps/ and packages/ don't break `uv sync`.
# `uv init --package packages/<name>` appends new members here automatically.
[tool.uv.workspace]
members = []

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "RUF", # ruff-specific rules
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
